--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,2 +1,7 @@
 {
+    "workbench.colorCustomizations": {
+        "activityBar.background": "#193226",
+        "titleBar.activeBackground": "#244736",
+        "titleBar.activeForeground": "#F6FBF8"
+    }
 }
